--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -58,6 +58,10 @@ h1 {
 
   .name {
     display: flex;
+
+    @media (width <= 320px) {
+      display: none;
+    }
   }
 
   .ripple {
@@ -97,6 +101,7 @@ address {
   border: none;
   border-radius: var(--border-radius);
   color: var(--btn-fg);
+  transition: all .2s;
 
   &:hover {
     cursor: pointer;
@@ -151,6 +156,7 @@ address {
   }
 
   .btn-icon {
+    transition: none;
     border: var(--outline-width-focus) solid currentcolor;
 
     &:hover {
@@ -246,11 +252,5 @@ address {
     .ripple {
       display: none;
     }
-  }
-}
-
-@media (width <= 320px) {
-  #menu a .name {
-    display: none;
   }
 }
